feat: GET /heartbeat endpoint
Resolves #241
