# static/docs/swagger.json
@@ -145,6 +145,39 @@
             }
         },
         "/compat/wakatime/v1/users/{user}/heartbeats": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "heartbeat"
+                ],
+                "summary": "Get heartbeats of user for specified date",
+                "operationId": "get-heartbeats",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Date",
+                        "name": "date",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -168,6 +201,13 @@
                         "schema": {
                             "$ref": "#/definitions/models.Heartbeat"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -204,6 +244,13 @@
                                 "$ref": "#/definitions/models.Heartbeat"
                             }
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -848,6 +895,13 @@
                         "schema": {
                             "$ref": "#/definitions/models.Heartbeat"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -884,6 +938,13 @@
                                 "$ref": "#/definitions/models.Heartbeat"
                             }
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -952,6 +1013,13 @@
                         "schema": {
                             "$ref": "#/definitions/models.Heartbeat"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -988,6 +1056,13 @@
                                 "$ref": "#/definitions/models.Heartbeat"
                             }
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1079,6 +1154,13 @@
         "models.Summary": {
             "type": "object",
             "properties": {
+                "branches": {
+                    "description": "branches are not persisted, but calculated at runtime in case a project filter is applied",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.SummaryItem"
+                    }
+                },
                 "editors": {
                     "type": "array",
                     "items": {
@@ -1235,6 +1317,12 @@
         "v1.StatsData": {
             "type": "object",
             "properties": {
+                "branches": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/v1.SummariesEntry"
+                    }
+                },
                 "daily_average": {
                     "type": "number"
                 },
@@ -1310,6 +1398,12 @@
         "v1.SummariesData": {
             "type": "object",
             "properties": {
+                "branches": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/v1.SummariesEntry"
+                    }
+                },
                 "categories": {
                     "type": "array",
                     "items": {
